--- a/views/index.ejs
+++ b/views/index.ejs
@@ -124,8 +124,8 @@
 
                         
                     
-                        <div class="swiper-slide swiper-lazy" style="background-color: transparent;">
-                            <a href="/projects/<%= project.id %>"><img class="title-image image-gallery"
+                        <div class="swiper-slide" style="background-color: transparent;">
+                            <a href="/projects/<%= project.id %>"><img class="title-image image-gallery swiper-lazy"
                                 src="<%= project.images[0].url %>"
                                 alt="<%= project.title %>"></a>       
                             <h2 class="project-title-index"><%= project.title %></h2>
@@ -232,8 +232,8 @@
 
                         
                     
-                        <div class="swiper-slide swiper-lazy" style="background-color: transparent;">
-                            <a href="/articles/<%= article.id %>"><img class="title-image image-gallery"
+                        <div class="swiper-slide" style="background-color: transparent;">
+                            <a href="/articles/<%= article.id %>"><img class="title-image image-gallery swiper-lazy"
                                 src="<%= article.images[0].url %>"
                                 alt="<%= article.title %>"></a>       
                             <a class="project-price-index" href="/articles/<%= article.id %>"><div class="index-articles-link"><%= article.title %></div></a>      
