--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -15,7 +15,9 @@
         <form action="/contactUs" method="POST" >
             <h2>Нужна консультация?</h2>
             <div class="input-group-footer">
+                <label for="user-name"></label>
                 <input type="tel" placeholder="Ваше имя" name="name" id="user-name" required>
+                <label for="user-mobile"></label>
                 <input type="text" name="mobile" placeholder="Номер телефона" id="user-mobile" required>
                 <input type="submit" value="Свяжитесь со мной" id="contact-us-submit">
                 
