--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -21,6 +21,11 @@ body {
 
 }
 
+.input-submit-head:focus {     
+  outline: none !important;
+  border: none;
+}
+
 a:hover {
   text-decoration: none !important;
 }
