--- a/public/stylesheets/index-first-section.css
+++ b/public/stylesheets/index-first-section.css
@@ -63,20 +63,6 @@
 
 
 
-.index-articles-title {
-  margin-top:15px;
-  font-size: 16px;
-  line-height: 30px;
-  /* or 150% */
-  font-family: 'GothamPro';
-  font-weight: 400;
-  text-decoration-line: underline;
-  text-align: left;
-  color: #5570BA;
-}
-
-
-
 
 .title-mobile {
     font-size: 30px;
@@ -292,9 +278,7 @@
       margin-bottom: 12px !important;
     }
     
-    .uk-dropdown-close-bedrooms {
-      margin-bottom: 6px;
-    }
+  
     
     .uk-active label {
       margin: 0;
@@ -354,11 +338,7 @@
       line-height: 22px;
       color: #2F3B43;
     }
-    
-    .input-distance {
-      width:182px;
-      margin-top:-6px;
-    }
+ 
     .wrapper-price-inputs {
       margin: 26px 37px;
       display: flex;
@@ -386,6 +366,7 @@
       outline: none;
       border: none;
       border-radius: 3px;
+      cursor: pointer;
     }
 
 
@@ -459,6 +440,8 @@
         border-radius: 5px;
         cursor: pointer;
       }
+
+      
     
     .header-title {
       margin:0 32px ;
