--- a/public/stylesheets/search-filter.css
+++ b/public/stylesheets/search-filter.css
@@ -35,6 +35,10 @@ body {
   border-radius: 5px;
 }
 
+.input-submit-head:focus {     
+  outline: none !important;
+}
+
 
 .input-text-head {
   border:none;
@@ -117,12 +121,6 @@ body {
 }
 
 
-/* Chrome, Safari, Edge, Opera */
-.small-word::-webkit-outer-spin-button,
-.small-word::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
 
 /* Firefox */
 input[type=number] {
@@ -209,23 +207,7 @@ fieldset {
   margin:0 10px;
 }
 
-.left-side-search {
-  display: flex;
-  flex-direction: column;
-}
 
-.form-control {
-  margin:10px auto;
-}
-
-.footer-search {
-  width:1536px;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: baseline;
-  padding:20px;
-}
 
 .reset-form {
   color: #666666;
@@ -237,9 +219,6 @@ fieldset {
   color:#5570BA;
 }
 
-.checbox {
-  margin:12px 0;
-}
 
 label {
   margin: 0 0 10px 10px;
@@ -247,10 +226,6 @@ label {
   
 }
 
-.search-main {
-  padding: 20px 100px;
-  border-bottom:1px solid #2F3B43; 
-}
 
 .location-dropdown {
   width: 542px !important;
@@ -371,6 +346,7 @@ input[type="search"]::-webkit-search-cancel-button  {
   outline: none;
   border: none;
   border-radius: 3px;
+  cursor: pointer;
 }
 
 .additional-filter {
