--- a/views/articles/edit.ejs
+++ b/views/articles/edit.ejs
@@ -71,7 +71,12 @@
 			<input type="text" name="article[introduction]" class="form-control" value="<%= article.introduction %>">
 		</div>	
 	</div>
-
+	<div class="form-row">
+		<div class="form-group col-md-6">
+			<p>Автор:</p>
+			<input type="text" name="article[author]" class="form-control" value="<%= article.author %>">
+		</div>	
+	</div>
 
 	<div class="form-row">
 		<div class="form-group col-md-6">
