--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -6,7 +6,7 @@
 </head>
 <nav>
     <ul class="menu">
-        <li class="logo"><a href="/"><div class="navbar-logo">Logo</div></a></li>
+        <li class="logo"><a href="/" class="hide-link">Logo<div class="navbar-logo"></div></a></li>
         
             
         <li class="item"><a href="/projects">Каталог</a></li>
