--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
 	<!-- UIkit JS -->
 	<script src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.3.0/dist/js/uikit-icons.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/cloudinary-core/2.8.0/cloudinary-core-shrinkwrap.min.js"></script>
+    <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
 </head>
 
 <div class="main-section">
@@ -122,21 +122,20 @@
     <div class="swiper-wrapper"> 
             <% projectSwiper.forEach(function(project){ %>
 
-                        
-                    
+                
+                
                         <div class="swiper-slide" style="background-color: transparent;">
                             <a href="/projects/<%= project.id %>"><img class="title-image image-gallery swiper-lazy"
-                                src="<%= project.images[0].url %>"
+                                src="<%= image_url(project.images[0].public_id, {width: 485, height: 360,  crop: "fit"}) %>"
                                 alt="<%= project.title %>"
-                                class="cld-responsive"
-                                style="width:485px"
-                            ></a>       
+                                
+                            ></a>
                             <h2 class="project-title-index"><%= project.title %></h2>
                             <h5 class="project-short-info">  <%= project.area %> м2 | <%= project.bedrooms %> спальни</h5>
                             <a class="project-price-index" href="/projects/<%= project.id %>"><div><%= project.price %>$</div></a>      
                         </div> 
                         
-                    
+                        
                         
                 
             <% }) %>
@@ -237,7 +236,8 @@
                     
                         <div class="swiper-slide" style="background-color: transparent;">
                             <a href="/articles/<%= article.id %>"><img class="title-image image-gallery swiper-lazy"
-                                src="<%= article.images[0].url %>"
+                                src="<%= image_url(article.images[0].public_id, {width: 485, height: 360,  crop: "fit"}) %>"
+                                
                                 alt="<%= article.title %>"></a>       
                             <a class="project-price-index" href="/articles/<%= article.id %>"><div class="index-articles-link"><%= article.title %></div></a>      
                         </div> 
@@ -265,6 +265,7 @@
 <script>
     
     var projects = { features: <%- JSON.stringify(projects) %> };
+    
     
     window.addEventListener('load', function() {
 	
@@ -364,9 +365,8 @@
     }
   });
 
-  var cl = cloudinary.Cloudinary.new({cloud_name: "demo"}); 
-    // replace 'demo' with your cloud name in the line above 
-    cl.responsive();
+ 
+    
 
 </script>
 
