--- a/views/index.ejs
+++ b/views/index.ejs
@@ -82,7 +82,7 @@
             
             
             
-                <div class="card-image" style="background-image: url('../images/buildings-middle.png');" data-image-full="../images/buildings.png">
+                <div class="card-image" style="background-image: url('../images/buildings-middle.png');" data-image-full="../images/buildings.webp">
                     
                     <img src="../images/buildings-middle.png" style="background-size: contain;" alt="Buildings" />    
                 </div>    
@@ -169,7 +169,7 @@
     <div class="about-blocks">
         
         <div class="about-item-block white-block">
-            <div class="card-image keys-about" style="background-image: url('../images/keys-middle.png');" data-image-full="../images/keys.png">
+            <div class="card-image keys-about" style="background-image: url('../images/keys-middle.png');" data-image-full="../images/keys.webp>
                 <img src="../images/keys-middle.png" alt="Keys" />    
             </div>
             <span class="text-about-content keys-content">Naszym priorytetem jest uczynienie z Ciebie idealnej oferty, a nie otrzymanie prowizji.</span>  
@@ -214,7 +214,7 @@
             
         </div>
         <div class="image-goal-wrapper">
-            <a class="card-image goal-image" style="background-image: url('../images/invest-middle.png');" data-image-full="../images/invest.png" href="http://localhost:3000/projects?search=&location=&price%5Bmin%5D=&price%5Bmax%5D=&appointment=%D0%98%D0%BD%D0%B2%D0%B5%D1%81%D1%82%D0%B8%D1%86%D0%B8%D0%B8&seaDistance=&area=">
+            <a class="card-image goal-image" style="background-image: url('../images/invest-middle.png');" data-image-full="../images/invest.webp" href="http://localhost:3000/projects?search=&location=&price%5Bmin%5D=&price%5Bmax%5D=&appointment=%D0%98%D0%BD%D0%B2%D0%B5%D1%81%D1%82%D0%B8%D1%86%D0%B8%D0%B8&seaDistance=&area=">
                 <img src="../images/invest-middle.png" alt="Invest" />
                 <div class="top-text goal-text">Хотите инвестировать?</div>
                 <div class="centered-text goal-text">Доходность 17 - 30%</div>
