--- a/views/index.ejs
+++ b/views/index.ejs
@@ -169,7 +169,7 @@
     <div class="about-blocks">
         
         <div class="about-item-block white-block">
-            <div class="card-image keys-about" style="background-image: url('../images/keys-middle.png');" data-image-full="../images/keys.webp>">
+            <div class="card-image keys-about" style="background-image: url('../images/keys-middle.png');" data-image-full="../images/keys.webp">
                 <img src="../images/keys-middle.png" alt="Keys" />    
             </div>
             <span class="text-about-content keys-content">Naszym priorytetem jest uczynienie z Ciebie idealnej oferty, a nie otrzymanie prowizji.</span>  
