--- a/views/contacts.ejs
+++ b/views/contacts.ejs
@@ -2,6 +2,7 @@
 
 <head>
 	<link rel='stylesheet' href='/stylesheets/contacts.css' />
+	<link rel="preload" href="styles.css" as="style">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 	<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.4.1/mapbox-gl.js'></script>
