--- a/views/index.ejs
+++ b/views/index.ejs
@@ -181,7 +181,7 @@
             <span class="text-about-content search-content">Doskonale znamy rynki, z którymi współpracujemy</span>  
         </div>
         <div class="about-item-block bottom-row-block">
-            <div class="card-image buildings-about" style="background-image: url('../images/buildings-about-middle.png');" data-image-full="../images/buildings-about.png">
+            <div class="card-image buildings-about" style="background-image: url('../images/buildings-about-middle.png');" data-image-full="../images/buildings-about.webp">
                 <img src="../images/buildings-about-middle.png" alt="Buildings about" />    
             </div>
             <span class="text-about-content buildings-content">Śledzimy dynamikę konstrukcji każdego obiektu</span class="text-about-content">  
@@ -199,14 +199,14 @@
     <h3 class="title-second-mobile proposition">Предложения для каждого</h3>
     <div class="goals-images-wrapper">
         <div class="image-goal-wrapper">
-            <a class="card-image goal-image" data-image-full="../images/personal.png" href="http://localhost:3000/projects?location=&price%5Bmin%5D=&price%5Bmax%5D=&area%5Bmin%5D=&area%5Bmax%5D=&seaDistance=&appointment=%D0%9B%D0%B8%D1%87%D0%BD%D0%BE%D0%B5+%D0%B8%D1%81%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5&search=">
+            <a class="card-image goal-image" data-image-full="../images/personal.webp" href="http://localhost:3000/projects?location=&price%5Bmin%5D=&price%5Bmax%5D=&area%5Bmin%5D=&area%5Bmax%5D=&seaDistance=&appointment=%D0%9B%D0%B8%D1%87%D0%BD%D0%BE%D0%B5+%D0%B8%D1%81%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D0%B5&search=">
                 <img src="../images/personal-middle.png" alt="Personal" /> 
                 <a class="bottom-text goal-text">Личное использование</a>   
             </a>
             
         </div>
         <div class="image-goal-wrapper">
-            <a class="card-image goal-image margin-image" style="background-image: url('../images/rent-middle.png');" data-image-full="../images/rent.png" href="http://localhost:3000/projects?search=&location=&price%5Bmin%5D=&price%5Bmax%5D=&appointment=%D0%90%D1%80%D0%B5%D0%BD%D0%B4%D0%B0&seaDistance=&area=">
+            <a class="card-image goal-image margin-image" style="background-image: url('../images/rent-middle.png');" data-image-full="../images/rent.webp" href="http://localhost:3000/projects?search=&location=&price%5Bmin%5D=&price%5Bmax%5D=&appointment=%D0%90%D1%80%D0%B5%D0%BD%D0%B4%D0%B0&seaDistance=&area=">
                 <img src="../images/rent-middle.png" alt="Rent" />
                 <a class="bottom-text goal-text" >Аренда</a>    
             </a>
