--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -22,7 +22,7 @@
                 <input type="submit" value="Свяжитесь со мной" id="contact-us-submit">
                 
             </div>
-            <div class="alert" role="alert" id="validation-message"></div>
+            <div class="warning-alert" role="alert" id="validation-message"></div>
             
             <h5>Гарантируем сохранность личных данных</h5>
         </form>    
