--- a/views/partials/paginateProjects.ejs
+++ b/views/partials/paginateProjects.ejs
@@ -4,48 +4,40 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
+
 <div class="pagination-wrapper">
-    <div class="pagination">
-        <ul class="pagination text-center">
-            <% if(projects.page - 1) { %>
-                <li class="page-item"><a class="page-link" href="/projects?page=<%= projects.page - 1 %>">Prev</a></li>
-            <% } %>
-            <% if(projects.page > 9) { %>
-                <li class="page-item"><a class="page-link" href="/projects?page=1">1</a></li>
-            <% } %>   
-            <% var i = ((projects.page) > 2 ? projects.page - 2 : 1) %>
-            <% if (i !== 1) { %>
-                <li class="page-item"><a class="page-link">...</a></li>
-            <% } %>
-            <% if(projects.pages> 1 && projects.docs.length) { %>
-                <% for (; i <= (projects.page + 2) && i <= projects.pages; i++) { %>
-                    <% if (i == projects.page) { %>
-                        <li class="page-item"><a class="page-link"><%= i %></a></li>
-                    <% } else { %>
-                        <li class="page-item"><a class="page-link" href="/projects?page=<%= i %>"
-                            <%= i === projects.page ? 'style=color:#000;' : '' %>
-                            
-                        ><%= i %></a></li>
-                    <% } %>
-                    <% if (i == projects.page + 2 && i < projects.pages) { %>
-                        <li class="page-item"><a class="page-link">...</a></li>
-                    <% } %>
+    <ul class="uk-pagination" uk-margin>
+        <% if(projects.page - 1) { %>
+            <li class="list-wrapper "><a class="arrow-prevnext"  href="/projects?page=<%= projects.page - 1 %>"><span uk-pagination-previous></span></a></li>
+        <% } %>
+        <% if(projects.page > 9) { %>
+            <li class="list-wrapper"><a  href="/projects?page=1">1</a></li>
+        <% } %>   
+        <% var i = ((projects.page) > 2 ? projects.page - 2 : 1) %>
+        <% if (i !== 1) { %>
+            <li class="list-wrapper"><a >...</a></li>
+        <% } %>
+        <% if(projects.pages> 1 && projects.docs.length) { %>
+            <% for (; i <= (projects.page + 2) && i <= projects.pages; i++) { %>
+                <% if (i == projects.page) { %>
+                    <li class="list-wrapper"><a ><%= i %></a></li>
+                <% } else { %>
+                    <li class="list-wrapper"><a  href="/projects?page=<%= i %>"
+                        <%= i === projects.page ? 'style=color:#000;' : '' %>
+                        
+                    ><%= i %></a></li>
+                <% } %>
+                <% if (i == projects.page + 2 && i < projects.pages) { %>
+                    <li class="list-wrapper"><a >...</a></li>
                 <% } %>
             <% } %>
-            <% if((projects.page + 1) <= projects.pages) { %>
-                <li class="page-item"><a class="page-link" href="/projects?page=<%= projects.page + 1 %>">Next</a></li>
-            <% } %>
-    
             
-        </ul>
+        <% } %>
+        <% if((projects.page + 1) <= projects.pages) { %>
+            <li class="list-wrapper"><a class="arrow-prevnext"  href="/projects?page=<%= projects.page + 1 %>"><span uk-pagination-next></span></a></li>
+        <% } %>
 
         
-    </div>
-
-    <div class="alert alert-light" role="alert">
-        <%= projects.length %>
-        Страница <%= projects.page %> из <%= projects.pages %>.
-    </div>
+    </ul>
 </div>
-
 
