--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,14 +76,12 @@
       
     </div>
     <div class="right-section">
-            <h3 class="title-mobile"> Elapce - гид по миру </h3>
-            <h3 class="title-mobile"> недвижимости </h3>
+            <h3 class="title-mobile"> Elapce - гид по миру <br> недвижимости </h3>
             <div class="copter"></div>
             
             
             
-                <div class="card-image" style="background-image: url('../images/buildings-middle.png');" data-image-full="../images/buildings.webp">
-                    
+                <div class="card-image building-main" style="background-image: url('../images/buildings-middle.png');" data-image-full="../images/buildings.webp">
                     <img src="../images/buildings-middle.png" style="background-size: contain;" alt="Buildings" />    
                 </div>    
             
@@ -148,11 +146,12 @@
             <div class="button-prev projects-button-prev"><i class="fas fa-chevron-left"></i></div> 
             <div class="button-next projects-button-next"><i class="fas fa-chevron-right"></i></div>
         </div>
+        <span  class="button-link-body"><a href="/projects">Каталог </a> <span class="bg"></span> </span>   
+       
         
-        <span  class="button-link-body"><a href="/projects">Каталог </a> <span class="bg"></span> </span>
         
-        
-    </div>        
+    </div>
+            
 </div>
 <div class="about-section">
     <div class="shape-orange-about"></div>
