--- a/public/stylesheets/index-first-section.css
+++ b/public/stylesheets/index-first-section.css
@@ -25,7 +25,7 @@
     width:100%;
     margin-top:-30px;
     display: flex;
-    padding:0 3vw;
+    
     flex-direction: column-reverse;
     justify-content: space-evenly;
     position: relative;
@@ -65,11 +65,14 @@
 
 
 .title-mobile {
+    font-family: 'GothamPro';
     font-size: 30px;
     line-height: 130%;
     color: #4B535F;
     display: block;
-    margin:0;
+    font-weight:500;
+    margin:25px 16px 0;
+    font-size: 30px;
 }
 
 
@@ -85,34 +88,27 @@
 
 
 .text-index-title {
-    max-width: 540px;
-    font-family: 'Lato' sans-serif;
-    font-size: 18px;
-    line-height: 180%;
-    /* or 32px */
     
-    letter-spacing: -0.03em;
-    
-    color: #000000;
-    margin:52px 0 73px;
-    opacity: 0.7;
     display: none;
   }
   .main-section .input-group {
     background: #FFFFFF;
     border-radius: 7px;
     max-width:500px;
-    width:100%;
+    width:90%;
     height: auto;
     margin:0 auto;
     display: flex;
     flex-direction: column;
     align-items: baseline;
+    
   }
   
   
   
-  
+  .building-main {
+    min-height: auto;
+  }
   
   .input-text-head {
     border:none;
@@ -127,7 +123,8 @@
     color: #2F3B43;
     background: url('../images/ellipsis.png') no-repeat;
     border-bottom: 1px solid #9EC1E1;
-    
+    background-position: center right;
+    text-align: left;
   }
 
 
@@ -147,8 +144,156 @@
     color: #2F3B43;
 }
 
+/* Filter main styles mobile */
 
 
+.input-submit-head {
+  background-image: linear-gradient(315.87deg, #F34B31 -11.35%, #FFA782 106.98%);
+  padding: 14px 106px;
+  margin:12px 11px 12px 20px;
+  color:white;
+  border:none;
+  text-transform: uppercase;
+  font-style: normal;
+  font-size: 18px;
+  line-height: 22px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin:8px auto;
+}
+
+.location-dropdown {
+  width: 342px !important;
+  text-align: left;
+  padding:0 !important;
+  border-radius: 3px;
+  
+}
+
+.search-location {
+  width: 266px;
+  background: #FFFFFF;
+  font-size: 14px;
+  line-height: 17px;
+  color: #2F3B43;
+  border: 1px solid RGBA(74,82,94,0.3);
+  box-sizing: border-box;
+  border-radius: 5px;
+  height: 51px;
+  padding: 10px 16px;
+  margin: 20px 32px 6px;
+}
+
+.search-location::placeholder {
+  color: #C9CBCF;
+}
+
+input[type="search"]::-webkit-search-cancel-button  {
+    -webkit-appearance: none;
+    height: 14px;
+    width: 14px;
+    background: url('../images/Union.svg') no-repeat;
+}
+
+.search-location:focus {
+  outline: none !important;
+  border: 2px solid RGBA(74,82,94,0.3);
+}
+
+.uk-active  {
+  margin-bottom: 8px !important;
+}
+
+
+
+.uk-active label {
+  margin: 0;
+  cursor: pointer;
+  font-family: "Lato-Regular";
+  font-size: 18px;
+  line-height: 22px;
+  margin-bottom:12px;
+  
+}
+
+.uk-active label:hover {
+  color: #5570BA;
+}
+
+.uk-active .label-last {
+  margin-bottom:0; 
+}
+
+.list-variants {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  background: #F2F4F7;
+  padding: 9px 38px 32px !important;
+}
+
+
+
+.list-variants li {
+  font-family: 'Lato-Regular';
+  font-size: 14px;
+  line-height: 17px;
+  margin-right: 20px;
+  border-bottom: 1px solid RGBA(47,59,67,0.7);
+  color: #2F3B43;
+  opacity: 0.7;
+  margin-top: 15px;
+  cursor: pointer;
+}
+
+.price-dropdown, .area-dropdown {
+  width: 325px !important;
+  padding:0 !important;
+}
+
+.input-price {
+  width:100px;
+  height: 41px;
+  padding:8px 11px;
+  color: #2F3B43;
+  border: 1px solid RGBA(74,82,94,0.3);
+  border-radius: 5px;
+  font-size: 18px;
+  line-height: 22px;
+  color: #2F3B43;
+}
+
+.wrapper-price-inputs {
+  margin: 26px 37px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.input-price:focus, .input-area:focus {
+  outline: none !important;
+  border: 2px solid RGBA(74,82,94,0.3);
+}
+
+.input-price::placeholder,.input-area::placeholder  {
+  font-size: 18px;
+  line-height: 22px;
+  /* identical to box height */  
+  color: #C9CBCF;
+}
+.price-button  {
+  width: 40px;
+  height: 41px;
+  background-image: url('../images/button-price-image.svg'), linear-gradient(290.75deg, #F34B31 -11.35%, #FFA782 106.98%);
+  background-repeat: no-repeat;
+  background-position: center;
+  outline: none;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
 
 
 @media all and (min-width: 900px) {
@@ -181,6 +326,8 @@
 
     .main-section .input-group {
         max-width:730px;
+        margin-top:73px;
+        width:100%;
         flex-direction: row;
         align-items: center;
     }
@@ -372,6 +519,7 @@
 
     .text-index-title {
         display: block;
+        margin-top:52px;
     }
 
     .input-text-head {
@@ -404,7 +552,7 @@
 
 @media (max-width:1460px) and (min-width:700px) {
     .main-section { 
-        padding:0 3vw;
+        
         box-sizing: border-box;
     }
     
@@ -412,8 +560,8 @@
     .left-section {
       margin:inherit auto;
     }
-    .input-group {
-        margin-top:25px;
+    .main-section .input-group {
+        margin-top:6vw;
         flex-direction: column;
         max-width:400px;
         width:100%;
@@ -426,6 +574,7 @@
         font-weight: 500;
         font-size: 18px;
         line-height: 20px;
+        background-position:  center right ;
     }
     .input-submit-head {
         background-image: linear-gradient(315.87deg, #F34B31 -11.35%, #FFA782 106.98%);
@@ -444,12 +593,13 @@
       
     
     .header-title {
+      font-size: 48px;
       margin:0 32px ;
       font-weight: normal;
     }
     .text-index-title {
         max-width: 400px;
-        font-family: 'Lato' sans-serif;
+        font-family: "Lato-Regular";
         font-size: 14px;
         line-height: 180%;
         /* or 32px */
@@ -487,15 +637,18 @@
   }
 
   .input-submit-head {
-    
-    padding: 14px 106px;
-    
+    padding: 14px 104px;
   }
   
 }
 
 @media (max-width:1280px) and (min-width:900px) {
+    .main-section .input-group {
       
+      max-width:320px;
+      width:100%;
+
+    } 
     .header-title {
         font-size: 40px;
         
