--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -989,10 +989,10 @@ a:hover {
     
     width: 400px;
   }
-  h3.title-second-mobile, h3.news-title, h3.about-title {
-    margin:48px auto ;
+  h3.title-second-mobile, h3.news-title, h3.about-title, .title-proposition {
+    margin:48px 0;
     text-align: center;
-    font-size:32px;
+    font-size:32px !important;
   }
 
   
