--- a/views/projects/index.ejs
+++ b/views/projects/index.ejs
@@ -24,7 +24,8 @@
             <div class="project-card">
                 
                 <a href="/projects/<%= project.id %>"><img class="title-image"
-                src="<%= project.images[0].url %>"
+                
+                src="<%= image_url(project.images[0].public_id, {width: 485, height: 360,  crop: "fit"}) %>"
                 alt="<%= project.title %>"></a>    
                 
                 <h2 class="project-title-index"><%= project.title %></h2>
