--- a/views/projects/index.ejs
+++ b/views/projects/index.ejs
@@ -3,7 +3,8 @@
 <head>
     <link rel='stylesheet' href='/stylesheets/project-index.css' />
     <link rel="stylesheet" href='/stylesheets/circles.css'>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="preload" href="fonts/GothamPro-Medium.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="fonts/MuseoSansCyrl-100.woff2" as="font" type="font/woff2" crossorigin>
     <link rel='stylesheet' href='https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v2.3.0/mapbox-gl-geocoder.css' type='text/css' />
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.css' rel='stylesheet' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.51.0/mapbox-gl.js'></script>
